<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="display_name_label">Display As</string>
    <string name="birthday_label">Birth Date (Click to Change)</string>
    <string name="born_label">Born </string>
    <string name="phone_label">Phones:</string>
    <string name="home_phone_label">Home</string>
    <string name="work_phone_label">Work</string>
    <string name="mobile_phone_label">Mobile</string>
    <string name="email_label">Email</string>
    <string name="comma">, </string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty_list_label">No contacts exist; choose "new contact" from the menu to create contacts.</string>
    <string name="edit_contact_label">Edit Contact</string>
    <string name="create_contact_label">Create Contact</string>
    <string name="set_birthday">Click Here to Set Birthday</string>
    <string name="personal_info">Personal Info</string>

</resources>